Struttura CSS senza Debug

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Booleando</title>
+        <title>Boolando</title>
 
         <!--CSS-->
         <link rel="stylesheet" href="css/style.css">
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     </head>
-    <body class="debug">
+    <body>
         
         <!--Header-->
         <header>
@@ -82,13 +82,13 @@
                         <!--Descrizione Prodotto-->
                         <div class="description">
                             <h5 class="brand">
-                                Levi's
+                                Guess
                             </h5>
                             <h4 class="product">
-                                RELAXED FIT TEE UNISEX
+                                ROSES TEE
                             </h4>
                             <h5 class="price">
-                                14,99&euro; <span>29,99&euro;</span>
+                                20,99&euro; <span>29,99&euro;</span>
                             </h5>
                         </div>
                     </div>
@@ -104,13 +104,13 @@
                         <!--Descrizione Prodotto-->
                         <div class="description">
                             <h5 class="brand">
-                                Levi's
+                                Come Zucchero Filato
                             </h5>
                             <h4 class="product">
-                                RELAXED FIT TEE UNISEX
+                                VOGLIA DI COLORI PASTELLO
                             </h4>
                             <h5 class="price">
-                                14,99&euro; <span>29,99&euro;</span>
+                                129,99&euro; <span>184,99&euro;</span>
                             </h5>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                                 Levi's
                             </h5>
                             <h4 class="product">
-                                RELAXED FIT TEE UNISEX
+                                TEE UNISEX
                             </h4>
                             <h5 class="price">
                                 14,99&euro; <span>29,99&euro;</span>
@@ -152,13 +152,13 @@
                         <!--Descrizione Prodotto-->
                         <div class="description">
                             <h5 class="brand">
-                                Levi's
+                                Maya Deluxe
                             </h5>
                             <h4 class="product">
-                                RELAXED FIT TEE UNISEX
+                                STRIPE BODICE
                             </h4>
                             <h5 class="price">
-                                14,99&euro; <span>29,99&euro;</span>
+                                99,99&euro;
                             </h5>
                         </div>
                     </div>
@@ -174,13 +174,13 @@
                         <!--Descrizione Prodotto-->
                         <div class="description">
                             <h5 class="brand">
-                                Levi's
+                                Esprit
                             </h5>
                             <h4 class="product">
-                                RELAXED FIT TEE UNISEX
+                                MAGLIONE - BLACK
                             </h4>
                             <h5 class="price">
-                                14,99&euro; <span>29,99&euro;</span>
+                                29,99&euro;
                             </h5>
                         </div>
                     </div>
@@ -205,7 +205,7 @@
                     </div>
 
                     <div class="info-footer-icon">
-                        <h4>Booleando s.r.l.</h4>
+                        <h4>Trovaci anche su</h4>
                         
                         <div class="icon-footer">
                             <i class="fa-brands fa-square-twitter"></i>
