--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
                         <!--Foto Prodotto-->
                         <div class="pic">
 
+                            <img src="img/1.webp" alt="Levis Relaxed Tee">
+                            <div class="discount">50%</div>
+                            <div class="eco-product">Sostenibilità</div> 
+                            <div class="like-button">
+                                <i class="fa-regular fa-heart"></i>
+                            </div>
+
                         </div>
 
                         <!--Descrizione Prodotto-->
@@ -66,7 +73,8 @@
                                 RELAXED FIT TEE UNISEX
                             </h4>
                             <h5 class="price">
-                                14,99&euro; <span>29,99&euro;</span>
+                                14,99&euro;
+                                <span style="text-decoration: line-through; color: rgb(177, 177, 177);">29,99&euro;</span>
                             </h5>
                         </div>
                     </div>
@@ -76,6 +84,12 @@
 
                         <!--Foto Prodotto-->
                         <div class="pic">
+
+                            <img src="img/2.webp" alt="Guess Tee">
+                            <div class="discount">30%</div>
+                            <div class="like-button">
+                                <i class="fa-regular fa-heart"></i>
+                            </div>
 
                         </div>
 
@@ -88,7 +102,8 @@
                                 ROSES TEE
                             </h4>
                             <h5 class="price">
-                                20,99&euro; <span>29,99&euro;</span>
+                                20,99&euro;
+                                <span style="text-decoration: line-through; color: rgb(177, 177, 177);">29,99&euro;</span>
                             </h5>
                         </div>
                     </div>
@@ -98,6 +113,12 @@
 
                         <!--Foto Prodotto-->
                         <div class="pic">
+
+                            <img src="img/3.webp" alt="Voglia di colori pastello">
+                            <div class="discount">30%</div>
+                            <div class="like-button">
+                                <i class="fa-regular fa-heart"></i>
+                            </div>
 
                         </div>
 
@@ -110,7 +131,8 @@
                                 VOGLIA DI COLORI PASTELLO
                             </h4>
                             <h5 class="price">
-                                129,99&euro; <span>184,99&euro;</span>
+                                129,99&euro; 
+                                <span style="text-decoration: line-through; color: rgb(177, 177, 177);">184,99&euro;</span>
                             </h5>
                         </div>
                     </div>
@@ -125,6 +147,13 @@
                         <!--Foto Prodotto-->
                         <div class="pic">
 
+                            <img src="img/4.webp" alt="Levis Tee">
+                            <div class="discount">50%</div>
+                            <div class="eco-product">Sostenibilità</div>
+                            <div class="like-button">
+                                <i class="fa-regular fa-heart"></i>
+                            </div>
+
                         </div>
 
                         <!--Descrizione Prodotto-->
@@ -136,7 +165,8 @@
                                 TEE UNISEX
                             </h4>
                             <h5 class="price">
-                                14,99&euro; <span>29,99&euro;</span>
+                                14,99&euro; 
+                                <span style="text-decoration: line-through; color: rgb(177, 177, 177);">29,99&euro;</span>
                             </h5>
                         </div>
                     </div>
@@ -146,6 +176,11 @@
 
                         <!--Foto Prodotto-->
                         <div class="pic">
+
+                            <img src="img/5.webp" alt="Stripe Bodice">
+                            <div class="like-button">
+                                <i class="fa-regular fa-heart"></i>
+                            </div>
 
                         </div>
 
@@ -169,6 +204,12 @@
                         <!--Foto Prodotto-->
                         <div class="pic">
 
+                            <img src="img/6.webp" alt="Maglione Esprit">
+                            <div class="eco-product-six">Sostenibilità</div>
+                            <div class="like-button">
+                                <i class="fa-regular fa-heart"></i>
+                            </div>
+
                         </div>
 
                         <!--Descrizione Prodotto-->
@@ -184,8 +225,8 @@
                             </h5>
                         </div>
                     </div>
-
                 </div>
+
             </div>
         </main>
 
